word wrap bugg fixed

--- a/web/app/themes/blank/src/scss/global/_mixins.scss
+++ b/web/app/themes/blank/src/scss/global/_mixins.scss
@@ -51,6 +51,14 @@
 	hyphens: auto;
 }
 
+.word_wrap {
+  word-wrap: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
+}
+
 @mixin button($font-size: 16px, $type: solid) {
   border-radius: 50px;
   padding: 0px 35px;
